--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -3,6 +3,11 @@
     color: #f54f4f;
 }
 
+.pokemon-red-bg
+{
+    background-color: #f54f4f;
+}
+
 .black
 {
     color: #333;
@@ -29,10 +34,11 @@ body {
 /* Set the fixed height of the footer here */
 #push,
 #footer {
-    height: 60px;
+    height: 80px;
 }
 #footer {
-    background-color: #f5f5f5;
+	
+    background-color: #f54f4f;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
