seance_actuelle: ajout des controles javascript pour les exercices précédents
evolution: design du graphique en barres

dossierjs: suppression de loading.js et popup.js because useless

--- a/css/perso/general.css
+++ b/css/perso/general.css
@@ -92,3 +92,9 @@ body .modal-large {
     color: #333;
 }
 
+.carousel-indicators li {
+  display: none;
+}
+.carousel-indicators .active {
+  display: none;
+}
