--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -9,20 +9,17 @@ body {
 
 /* Wrapper for page content to push down footer */
 #wrap {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    /* Negative indent footer by it's height */
-    margin: 0 auto -130px;
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -150px;
+  /* Pad bottom by footer height */
+  padding: 0 0 150px;
 }
 
 /* Set the fixed height of the footer here */
-#push,
 #footer {
-    height: 130px;
-}
-#footer {
-	
+	height: 150px;
     background-color: #f54f4f;
 }
 
@@ -41,13 +38,6 @@ body {
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-
-#wrap > .container {
-    padding-top: 60px;
-}
-.container .credit {
-    margin: 20px 0;
-}
 
 code {
     font-size: 80%;
