Changement couleur Theme (voir dans le menu test avant mes badges) (prendre table inscription.sql)

--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -4091,7 +4091,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f54f4f;
+  background-color: #428bca;
   margin-bottom: 0;
 }
 .navbar-default .navbar-brand {
