--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -20,7 +20,7 @@ body {
 /* Set the fixed height of the footer here */
 #footer {
 	height: 150px;
-    background-color: #f54f4f;
+    background-color: #428bca;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
