--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -21,6 +21,7 @@ body {
 #footer {
 	height: 150px;
     background-color: #428bca;
+    color: white;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
