--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -7,6 +7,23 @@ body {
     /* The html and body elements cannot have any padding or margin. */
 }
 
+#nav
+{
+	top: 50%;
+	left: 50%;
+	width: 100%;
+    z-index:10;
+}
+
+#nav.affix {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    z-index:10;
+}
+
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
