Design de la page statistiques

--- a/css/perso/general.css
+++ b/css/perso/general.css
@@ -75,7 +75,11 @@ body .modal-large {
 }
 
 /* Colors */
-
+.panel-purple
+{
+	background-color: red;
+	border-color: red;
+}
 .green
 {
 	color: #A8CD1B;
