Liste des connectés

--- a/css/perso/index.css
+++ b/css/perso/index.css
@@ -69,3 +69,37 @@ body {
 code {
     font-size: 80%;
 }
+
+/* Sidebar */
+
+#toggleSidebar {
+    float:right;
+    color:#779DD7;
+    padding:2px 4px;
+}
+
+#sidebar{
+ float:right;   
+ height: 100%;
+}
+
+
+.accordion-heading .accordion-toggle-small {
+    display: block;
+    padding: 4px 8px; /*8px 15px;*/
+}
+
+.accordion-inner-small {
+    padding: 4px 8px;  /*9px 15px;*/
+    border-top: 1px solid #e5e5e5;
+}
+
+.no-sidebar {
+    margin-right:0 !important;
+}
+
+.scrollDiv {
+    overflow-y: scroll;
+    display: inline-block;
+    float: none; /* Very important */
+}
