--- a/css/perso/general.css
+++ b/css/perso/general.css
@@ -1,5 +1,17 @@
 @import url("../fonts/font.css");
 
+
+.datepicker
+{
+	z-index: 1151 !important;
+}
+
+.paddingmargin0
+{
+	margin: 0;
+	padding: 0;
+}
+
 .height-100
 {
 	height: 100%;
@@ -31,8 +43,8 @@
 .cut-text
 {
 	overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .progress-borders
